--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,14 @@
   pointer-events: none;
 }
 
+.navbar a {
+  color: white;
+  text-decoration: none;
+}
+
+.navbar a:hover {
+  text-decoration: underline;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
